# sl-departure-board

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cross.cmake  main.cpp
.github/workflows/: build-and-test.yml  docker-dev-image.yml
cmake/: FindTCLAP.cmake  FindwiringPi.cmake  GetTCLAP.cmake  GetWiringPi.cmake  Getu8g2.cmake  Package.cmake
doc/: hardware.md
include/: Argparser.h  SLDisplay.h  U8G2_SSD1322_NHD_256X64_F_8080_RPi.h  esseltub.h
libsl/: CMakeLists.txt
libsl/cmake/: GetCpr.cmake  GetJson.cmake
libsl/include/sl/: Data.h  DepartureFetcher.h  DeviationFetcher.h
libsl/src/: Data.cpp  DepartureFetcher.cpp
patches/: u8g2.patch  wiringPi.patch  wiringpi.patch  wiringpi_CMakeLists.txt
src/: Argparser.cpp  SLDisplay.cpp  esseltub.c
